--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-pokedex></app-pokedex>
+<router-outlet></router-outlet>
+
+  <nav>
+    <a routerLink="/pokemons">Liste de Pokemons</a>
+  </nav>
